added phpmyadmin, text updated
Text updated in some pages and added js function for opening tabs

--- a/app/templates/general.html
+++ b/app/templates/general.html
@@ -11,10 +11,10 @@
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
-				<li><a href="about">About</a></li>
-				<li><a href="schutz">Schutzmechanismen</a></li>
-				<li><a href="">Test</a></li>
-        <li><a href="https://github.com/nihalalizada/kappes-projekt" target="_blank"><img src="/static/img/github-logo.png" alt="GitHub"></a></li>
+      <li><a href="general">Mitm</a></li>
+      <li><a href="tools">Tools</a></li>
+              <li><a href="schutz">Schutzmechanismen</a></li>
+              <li><a href="https://github.com/nihalalizada/kappes-projekt" target="_blank"><img src="/static/img/github-logo.png" alt="GitHub"></a></li>
         </ul>
       </nav>
     </header>
@@ -29,8 +29,8 @@
           funktionieren und wie man sich davor schützen kann, um die eigene Sicherheit im Cyberspace zu gewährleisten.
         </p>
      </div>
-        <div class = "footer">
-            Footer - 2023 - Informatik Projekt - Creative Commons License
-            </div>  
+     <div class = "footer">
+      Informatik Projekt - Man in the Middle - Group Rom - 2023
+      </div> 
     </body>
   </html>
