--- a/app/templates/proxy.html
+++ b/app/templates/proxy.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="{{ url_for('static', filename='js/tabs.js')}}"></script>
 	  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <title>Informatik Projekt Demo</title>
   </head>
@@ -11,9 +12,9 @@
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
-				<li><a href="about">About</a></li>
-				<li><a href="schutz">Schutzmechanismen</a></li>
-				<li><a href="">Test</a></li>
+          <li><a href="general">Mitm</a></li>
+          <li><a href="tools">Tools</a></li>
+          <li><a href="schutz">Schutzmechanismen</a></li>
         <li><a href="https://github.com/nihalalizada/kappes-projekt" target="_blank"><img src="/static/img/github-logo.png" alt="GitHub"></a></li>
         </ul>
       </nav>
@@ -21,43 +22,51 @@
      </div>
      <div class="container-c">
         <h1>Proxy Server Szenario</h1>
-        <h2> Was ist ein Proxy Server?
-        </h2>
-        <br>
-        <p> Ein Proxy-Server ist ein Server, der als Mittelsmann fungiert, um Anfragen von Clients an 
-          andere Server weiterzuleiten. <br> 
-          Es handelt sich hierbei um einen Server, der Anfragen für Inhalte, die über das Internet abgerufen werden sollen, entgegennimmt und weiterleitet. 
-          Die meisten Benutzer nutzen Proxy-Server, um ihre IP-Adresse zu verbergen und ihre Online-Aktivitäten zu schützen. 
-          Es kann jedoch auch andere Gründe geben, warum Benutzer einen Proxy-Server verwenden, wie zum Beispiel den Zugriff auf 
-          Inhalte, die aufgrund geografischer oder anderer Einschränkungen sonst nicht zugänglich wären.<br>
-          Ein weiterer wichtiger Einsatzbereich von Proxy-Servern besteht darin, den Netzwerkverkehr zu überwachen und zu steuern. 
-          Durch die Verwendung eines Proxy-Servers können IT-Administratoren sicherstellen, dass keine unerwünschten Inhalte über 
-          das Netzwerk geladen werden und dass die Netzwerkleistung und -sicherheit optimiert werden. Darüber hinaus können 
-          Proxy-Server verwendet werden, um Daten zu komprimieren, Caching zu implementieren und die Authentifizierung und 
-          Autorisierung von Benutzern zu verwalten.
+        <div class="tab">
+          <button class="tablinks" onclick="openTab(event, 'Tab1')">Proxy Server</button>
+          <button class="tablinks" onclick="openTab(event, 'Tab2')">Warum Proxy?</button>
+          <button class="tablinks" onclick="openTab(event, 'Tab3')">Zweck der Demo</button>
+          <button class="tablinks" onclick="openTab(event, 'Tab4')">Zertifikate</button>
+        </div>
+    
+        <div id="Tab1" class="tabcontent">
+          <h2>Proxy Server:</h2>
           <br>
-          Es gibt verschiedene Arten von Proxy-Servern, wie z.B. transparente Proxys, anonyme Proxys und distribuierte Proxys. 
-          Jede Art von Proxy-Server hat ihre eigenen Vor- und Nachteile und es ist wichtig, die richtige Art für die jeweiligen 
-          Anforderungen auszuwählen.
-        </p>
-        <h2> Warum haben wir einen benutzt?</h2>
-        <br>
+          <p> Ein Proxy-Server ist ein Server, der als Middleman dient, um Anfragen von Clients an 
+            Server weiterzuleiten. <br> 
+            Es handelt sich hierbei um einen Server, der Anfragen für Inhalte, die über das Internet abgerufen werden sollen, entgegennimmt und weiterleitet. 
+            Die meisten Benutzer nutzen Proxy-Server für viele Zwecke wie zb Schutz der eigene Identität oder auch die Netzwerkleistung zu verbessern.
+            Es kann jedoch auch andere Gründe geben, warum Benutzer einen Proxy-Server verwenden, wie zum Beispiel den Zugriff auf 
+            Inhalte, die aufgrund geografischer oder anderer Einschränkungen sonst nicht zugänglich wären.<br>
+            Ein weiterer wichtiger Einsatzbereich von Proxy-Servern besteht darin, den Netzwerkverkehr zu überwachen und zu steuern. 
+            Durch die Verwendung eines Proxy-Servers können IT-Administratoren sicherstellen, dass keine unerwünschten Inhalte über 
+            das Netzwerk geladen werden und dass die Netzwerkleistung und -sicherheit optimiert werden. Darüber hinaus können 
+            Proxy-Server verwendet werden, um Daten zu komprimieren, Caching zu implementieren und die Authentifizierung und 
+            Autorisierung von Benutzern zu verwalten.
+            <br>
+            Es gibt verschiedene Arten von Proxy-Servern, wie z.B. Forward Proxy, Reverse Proxy oder Transparent Proxy
+          </p>
+        </div>
+        <div id="Tab2" class="tabcontent">
+          <h2>Warum Proxy-Server?</h2>
+          <br>
         <p>Wir haben uns entschieden, einen Proxy-Server in unserem Szenario zu verwenden, da er uns die Möglichkeit bot, 
           die Netzwerkkommunikation eines Benutzers zu überwachen und zu manipulieren. 
           In unserem Fall war es wichtig, die POST- und GET-Anfragen des Benutzers abzufangen und zu verändern, 
           um einen Man-in-the-Middle-Angriff durchzuführen.
           <br>
-          Ein Proxy-Server fungiert als Vermittler zwischen dem Benutzer und dem ??, indem er Anfragen für Inhalte, 
-          die über das ?? abgerufen werden sollen, entgegennimmt und weiterleitet. 
-          Daher konnten wir durch die Verwendung eines Proxy-Servers die Netzwerkkommunikation des Benutzers 
+          Ein Proxy-Server dient als Vermittler zwischen dem Benutzer und dem Server, indem er Anfragen entgegennimmt und weiterleitet. 
+          Daher könnten wir durch die Verwendung eines Proxy-Servers die Netzwerkkommunikation des Benutzers 
           überwachen und seine Anfragen abfangen, um sie zu manipulieren.
           <br>
           Darüber hinaus konnten wir durch die Verwendung eines Proxy-Servers auch sicherstellen, dass alle Daten, die zwischen 
-          dem Benutzer und dem ?? ausgetauscht werden, über den Proxy-Server laufen und somit für uns zugänglich sind. 
+          dem Benutzer und dem Server ausgetauscht werden, über den Proxy-Server laufen und somit für uns zugänglich sind. 
           Dadurch konnten wir die Daten des Benutzers auf geeignete Weise verändern, 
           um den Man-in-the-Middle-Angriff auszuführen.
         </p>
-        <h2>Was wollen wir damit Zeigen?</h2>
+        </div>
+        <div id="Tab3" class="tabcontent">
+        <h2>Was wollen wir damit zeigen?</h2>
         <br>
         <p>Mit unserem Szenario, bei dem wir einen Proxy-Server verwendet haben, zeigen wir auf, wie gefährlich ein 
           Man-in-the-Middle-Angriff sein kann. Durch die Modifizierung der POST requests wird die Integrität verletzt, was zeigt, 
@@ -69,24 +78,26 @@
           um sicherzustellen, dass ihre Daten und ihre Kommunikation geschützt bleiben.
         </p>
         <br>
-        <h2>Warum sind Zertifikate wichtig ?</h2>
+        </div>
+        <div id="Tab4" class="tabcontent">
+          <h2>Warum sind Zertifikate wichtig?</h2>
+          <br>
+          <p>
+            Erklären warum wichtig für unser Szenario --Weiterleitung zu Zertifikate erstellen (Weitere HTML Page? Oder weiter unten auf dieser Seite?)
+          </p>
+        </div>
         <br>
-        <p>
-          Erklären warum wichtig für unser Szenario --Weiterleitung zu Zertifikate erstellen (Weitere HTML Page? Oder weiter unten auf dieser Seite?)
-        </p>
-        <br>
-        <h2>Anleitung für das Szenario</h2>
-        <br>
-        <p>Wichtig am besten mit firefox</p>
-
         <div class="center">
           <div class="box">
-            <h2>Szenario Links </h2>
+            <h2>Szenario Durchführung </h2>
+            <br>
             <li><a href="login">Login mit Http</a></li>
+            <br>
             <li><a href="loginsecure">Login mit Https</a></li>
+            <br>
           </div>
-        <div class = "footer">
-            Footer - 2023 - Informatik Projekt - Creative Commons License
+          <div class = "footer">
+            Informatik Projekt - Man in the Middle - Group Rom - 2023
             </div>  
           </body>
         </html>
