--- a/app/templates/arp.html
+++ b/app/templates/arp.html
@@ -11,10 +11,10 @@
       <nav>
         <ul>
           <li><a href="/">Home</a></li>
-				<li><a href="about">About</a></li>
-				<li><a href="schutz">Schutzmechanismen</a></li>
-				<li><a href="">Test</a></li>
-        <li><a href="https://github.com/nihalalizada/kappes-projekt" target="_blank"><img src="/static/img/github-logo.png" alt="GitHub"></a></li>
+      <li><a href="general">Mitm</a></li>
+      <li><a href="tools">Tools</a></li>
+              <li><a href="schutz">Schutzmechanismen</a></li>
+              <li><a href="https://github.com/nihalalizada/kappes-projekt" target="_blank"><img src="/static/img/github-logo.png" alt="GitHub"></a></li>
         </ul>
       </nav>
     </header>
@@ -26,7 +26,7 @@
         <p> Anleitung und Vorraussetzung</p>
      </div>
         <div class = "footer">
-            Footer - 2023 - Informatik Projekt - Creative Commons License
+            Informatik Projekt - Man in the Middle - Group Rom - 2023
             </div>  
     </body>
   </html>
