--- a/app/templates/transfer.html
+++ b/app/templates/transfer.html
@@ -9,10 +9,10 @@
 		<header>
 			<nav>
 			  <ul>
-				<li><a href="/">Home</a></li>
-				<li><a href="about">About</a></li>
-				<li><a href="schutz">Schutzmechanismen</a></li>
-				<li><a href="">Test</a></li>
+				< <li><a href="/">Home</a></li>
+				<li><a href="general">Mitm</a></li>
+				<li><a href="tools">Tools</a></li>
+                <li><a href="schutz">Schutzmechanismen</a></li>
 				<li><a href="https://github.com/nihalalizada/kappes-projekt" target="_blank"><img src="/static/img/github-logo.png" alt="GitHub"></a></li>
 			  </ul>
 			</nav>
@@ -52,7 +52,7 @@
 		</div>
 	</main>
 	<div class = "footer">
-        Footer - 2023 - Informatik Projekt - Creative Commons License
-        </div>
+		Informatik Projekt - Man in the Middle - Group Rom - 2023
+		</div> 
 	</body>
 </html>
