--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -46,6 +46,8 @@
          <li>Virtual Box</li>
          <li>Wireshark</li>
          <li>Python</li>
+         <li>Ettercap</li>
+         <li>Docker</li>
          <li>Weiter Tools hinzufügen!!!!!</li>
          <br>
          Weitere Informationen zu den jeweiligen Tools finden Sie unter Information "Tools".
