--- a/app/templates/login_arp.html
+++ b/app/templates/login_arp.html
@@ -21,10 +21,10 @@
     <div class="login_arp">
     <main class="container">
         <h2>Login</h2>
-        <form action="/" method="POST">
+        <form action="login_arp" method="POST">
             <div class="input-field">
                 <input type="text" name="username" id="username"
-                    placeholder="Enter Your Username">
+                    placeholder="Enter Your Bank Username">
                 <div class="underline"></div>
             </div>
             <div class="input-field">
