--- a/app/templates/transfer.html
+++ b/app/templates/transfer.html
@@ -9,7 +9,7 @@
 		<header>
 			<nav>
 			  <ul>
-				<li><a href="/">Home</a></li>
+				<li><a href="/home">Home</a></li>
 				<li><a href="general">Mitm</a></li>
 				<li><a href="tools">Tools</a></li>
                 <li><a href="schutz">Schutzmechanismen</a></li>
