--- a/app/templates/login_arp.html
+++ b/app/templates/login_arp.html
@@ -18,10 +18,10 @@
           </ul>
         </nav>
       </header>
-    <div class="login_arp">
+    <div class="login">
     <main class="container">
         <h2>Login</h2>
-        <form action="login_arp" method="POST">
+        <form action="/" method="POST">
             <div class="input-field">
                 <input type="text" name="username" id="username"
                     placeholder="Enter Your Bank Username">
