--- a/app/templates/proxy.html
+++ b/app/templates/proxy.html
@@ -50,7 +50,7 @@
         <div id="Tab2" class="tabcontent">
           <h2>Warum Proxy-Server?</h2>
           <br>
-        <p>Wir haben uns entschieden, einen Proxy-Server in unserem Szenario zu verwenden, da er uns die Möglichkeit bot, 
+        <p>Wir haben uns entschieden, einen Proxy-Server in unserem Szenario zu verwenden, da er uns die Möglichkeit angeboten hat, 
           die Netzwerkkommunikation eines Benutzers zu überwachen und zu manipulieren. 
           In unserem Fall war es wichtig, die POST- und GET-Anfragen des Benutzers abzufangen und zu verändern, 
           um einen Man-in-the-Middle-Angriff durchzuführen.
@@ -61,8 +61,7 @@
           <br>
           Darüber hinaus konnten wir durch die Verwendung eines Proxy-Servers auch sicherstellen, dass alle Daten, die zwischen 
           dem Benutzer und dem Server ausgetauscht werden, über den Proxy-Server laufen und somit für uns zugänglich sind. 
-          Dadurch konnten wir die Daten des Benutzers auf geeignete Weise verändern, 
-          um den Man-in-the-Middle-Angriff auszuführen.
+          Dadurch konnten wir die Daten des Benutzers auf geeignete Weise verändern.
         </p>
         </div>
         <div id="Tab3" class="tabcontent">
