--- a/app/templates/login_arp.html
+++ b/app/templates/login_arp.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
           <ul>
-            <li><a href="/home">Home</a></li>
+            <li><a href="/">Home</a></li>
 				<li><a href="general">Mitm</a></li>
 				<li><a href="tools">Tools</a></li>
                 <li><a href="schutz">Schutzmechanismen</a></li>
@@ -21,10 +21,10 @@
     <div class="login_arp">
     <main class="container">
         <h2>Login</h2>
-        <form action="login_arp" method="POST">
+        <form action="/" method="POST">
             <div class="input-field">
                 <input type="text" name="username" id="username"
-                    placeholder="Enter Your Bank Username">
+                    placeholder="Enter Bank Your Username">
                 <div class="underline"></div>
             </div>
             <div class="input-field">
