--- a/app/templates/login_arp.html
+++ b/app/templates/login_arp.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
           <ul>
-            <li><a href="/">Home</a></li>
+            <li><a href="/home">Home</a></li>
 				<li><a href="general">Mitm</a></li>
 				<li><a href="tools">Tools</a></li>
                 <li><a href="schutz">Schutzmechanismen</a></li>
@@ -18,7 +18,7 @@
           </ul>
         </nav>
       </header>
-    <div class="login_arp">
+    <div class="login">
     <main class="container">
         <h2>Login</h2>
         <form action="/" method="POST">
