--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -26,7 +26,7 @@
         auszuprobieren. Die Demonstration ist ein praxisorientiertes Produkt, das Ihnen ein besseres Verständnis der Bedrohungen 
         durch Man-in-the-Middle-Angriffe vermitteln soll. 
         <br><br>
-        Auf unserer Webseite stehen ausführliche Anleitungen zu den Szenarien und Informationen über die Tools zur 
+        Auf unserer Webseite stehen ausführliche Anleitungen zu den Angriffen und Informationen über die Tools zur 
         Verfügung, die wir bei der Erstellung unseres Projekts eingesetzt haben. Wir haben uns bemüht, eine benutzerfreundliche 
         Oberfläche zu gestalten, um auch unerfahrenen Anwendern die Möglichkeit zu geben, die Demonstration auszuprobieren und mehr 
         über das Thema zu erfahren. Zusätzlich finden Sie Informationen über Maßnahmen zur Absicherung gegen 
@@ -35,20 +35,19 @@
       <div class="tab">
         <button class="tablinks" onclick="openTab(event, 'Tab1')">Vorraussetzung</button>
         <button class="tablinks" onclick="openTab(event, 'Tab2')">Informationen</button>
-        <button class="tablinks" onclick="openTab(event, 'Tab3')">Szenarien</button>
+        <button class="tablinks" onclick="openTab(event, 'Tab3')">Angriffe</button>
       </div>
   
       <div id="Tab1" class="tabcontent">
       <h2>Vorraussetzung</h2>
       <br>
+      <h4> Um die Angriffe ausführen zu können, müssen folgende Tools installiert sein:</h4>
       <p> 
-        Um die Szenarien nutzen zu können, müssen folgende Tools installiert sein:
          <li>Virtual Box</li>
+         <li>Docker</li>
          <li>Wireshark</li>
          <li>Python</li>
          <li>Ettercap</li>
-         <li>Docker</li>
-         <li>Weiter Tools hinzufügen!!!!!</li>
          <br>
          Weitere Informationen zu den jeweiligen Tools finden Sie unter Information "Tools".
       </p>
@@ -65,13 +64,13 @@
       </div>
 
       <div id="Tab3" class="tabcontent">
-          <h2>Szenarios</h2>
+          <h2>Angriffe</h2>
           <br>
-          <li><a href="proxy">Proxy Szenario</a></li>
+          <li><a href="proxy">Proxy Angriff</a></li>
           <br>
-          <li><a href="arp">ARP Cache Poisoning</a></li>
+          <li><a href="arp">ARP Cache Poisoning Angriff</a></li>
           <br>
-          <li><a href="">3 Demo</a></li>
+          <li><a href="">Rouge Access Point Angriff</a></li>
       </div>
     </div>
     <div class = "footer">
