--- a/app/templates/proxy.html
+++ b/app/templates/proxy.html
@@ -21,7 +21,7 @@
     </header>
      </div>
      <div class="container-c">
-        <h1>Proxy Server Szenario</h1>
+        <h1>Proxy Server Angriff</h1>
         <div class="tab">
           <button class="tablinks" onclick="openTab(event, 'Tab1')">Proxy Server</button>
           <button class="tablinks" onclick="openTab(event, 'Tab2')">Warum Proxy?</button>
@@ -88,7 +88,7 @@
         <br>
         <div class="center">
           <div class="box">
-            <h2>Szenario Durchführung </h2>
+            <h2>Angriff Durchführung </h2>
             <br>
             <li><a href="login">Login mit Http</a></li>
             <br>
