changes to general.html and Rouge-AP added

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -201,3 +201,12 @@ nav ul li:last-child {
   border: 1px solid #ccc;
   border-top: none;
 }
+
+.images{
+  display: flex;
+  justify-content: center;
+}
+
+img{
+  width: 45%;
+}
