--- a/app/templates/general.html
+++ b/app/templates/general.html
@@ -25,10 +25,33 @@
           aktive Rolle in der Kommunikation zwischen zwei Parteien spielt. Die Idee dahinter ist, dass der Angreifer die 
           Übertragung von Informationen abfängt, ändert und an den Empfänger weiterleitet, ohne dass die betroffene Partei 
           davon weiß. Dies kann dazu führen, dass vertrauliche Daten gestohlen oder unabsichtlich verändert werden, was zu 
-          ernsthaften Folgen für die Betroffenen haben kann. Es ist wichtig zu verstehen, wie Man-in-the-Middle-Angriffe 
-          funktionieren und wie man sich davor schützen kann, um die eigene Sicherheit im Cyberspace zu gewährleisten.
+          schwerwiegenden Folgen für die Betroffenen haben kann.
         </p>
      </div>
+     <div class = "images">
+      <img src="/static/img/MITM_1.png" alt="MITM1">
+    </div>
+    
+    <div class="container-c">
+      <p>
+        Der Angreifer positioniert sich in der Mitte dieser Verbindung und kann Daten, die zwischen dem Benutzer und der 
+        Ressource ausgetauscht werden, abfangen, ändern und manipulieren.
+        <br>
+        Ein User (Victim) versucht, eine Ressource im Internet zu erreichen. 
+      </p>
+   </div>
+
+    <div class = "images">
+      <img src="/static/img/MITM_2.png" alt="MITM2">
+    </div>
+
+    <div class="container-c">
+      <p>
+        Der Angreifer nutzt eine Schwachstelle im Netzwerk, um sich zwischen dem Benutzer und der 
+        Zielressource einzuschleusen. Dabei kann er die Daten, die zwischen dem Benutzer und der Ressource übertragen werden, 
+        abfangen und ändern.
+      </p>
+   </div>
      <div class = "footer">
       Informatik Projekt - Man in the Middle - Group Rom - 2023
       </div> 
